app/assets/sass/application.scss
/* ... */
#content.vehicle-tax-start span.beta {
    display: inline-block;
    background: #f47738;
    color: #fff;
    font-family: "nta", Arial, sans-serif;
    font-size: 16px;
    line-height: 1.25;
    font-weight: 300;
    text-transform: none;
    font-weight: 700;
    line-height: 1;
    text-transform: uppercase;
    padding: 5px 5px 2px 6px;
    vertical-align: middle;
    margin-right: 10px
}

@media (max-width: 640px) {
    #content.vehicle-tax-start span.beta {
        font-size: 14px;
        line-height: 1.14286
    }
}
#content.vehicle-tax-start .contact-numbers {
    padding-left: 0
}

#content.vehicle-tax-start .contact-numbers li {
    font-family: "nta", Arial, sans-serif;
    font-size: 24px;
    line-height: 1.25;
    font-weight: 400;
    text-transform: none;
    font-weight: 700;
    width: 100%;
    float: left;
    list-style: none;
    padding-left: 0;
    padding-bottom: 1em
}

@media (max-width: 640px) {
    #content.vehicle-tax-start .contact-numbers li {
        font-size: 20px;
        line-height: 1.2
    }
}

@media (min-width: 769px) {
    #content.vehicle-tax-start .contact-numbers li {
        width: 50%
    }
}

#content.vehicle-tax-start .contact-numbers .contact-type {
    font-family: "nta", Arial, sans-serif;
    font-size: 19px;
    line-height: 1.31579;
    font-weight: 400;
    text-transform: none;
    font-weight: 400;
    display: block
}

@media (max-width: 640px) {
    #content.vehicle-tax-start .contact-numbers .contact-type {
        font-size: 16px;
        line-height: 1.25
    }
}

#content.vehicle-tax-start .call-charges p {
    font-family: "nta", Arial, sans-serif;
    font-size: 14px;
    line-height: 1.42857;
    font-weight: 400;
    text-transform: none;
    padding-top: 0;
    padding-bottom: 0;
    margin-bottom: 0;
    margin-top: 0
}

@media (max-width: 640px) {
    #content.vehicle-tax-start .call-charges p {
        font-size: 12px;
        line-height: 1.25
    }
}

#content.vehicle-tax-start .call-charges ul {
    list-style: none;
    padding: 0;
    margin: 0
}

#content.vehicle-tax-start .call-charges ul li {
    font-family: "nta", Arial, sans-serif;
    font-size: 14px;
    line-height: 1.42857;
    font-weight: 400;
    text-transform: none;
    padding-left: 0;
    margin-left: 0
}

@media (max-width: 640px) {
    #content.vehicle-tax-start .call-charges ul li {
        font-size: 12px;
        line-height: 1.25
    }
}

#content.vehicle-tax-start form.get-started {
    margin-top: 0
}

#content.vehicle-tax-start .by-phone {
    margin-top: 20px
}

@media (min-width: 769px) {
    #content.vehicle-tax-start .by-phone {
        margin-top: 0
    }
}

#content.vehicle-tax-start .at-post-office {
    margin-top: 40px
}

@media (min-width: 769px) {
    #content.vehicle-tax-start .at-post-office {
        margin-top: 50px
    }
}

span.beta {
display: inline-block;
background: #f47738;
color: #fff;
font-family: "nta",Arial,sans-serif;
font-size: 16px;
line-height: 1.25;
font-weight: 300;
text-transform: none;
font-weight: 700;
line-height: 1;
text-transform: uppercase;
padding: 5px 5px 2px 6px;
vertical-align: middle;
margin-right: 10px;
margin-left: 10px;
}

.help-notice {
margin:1em 0 0 0;
padding-bottom:0.5em;
background: url("/public/images/icon-important.png") no-repeat scroll 0 0.5em;
}
.help-notice p {
  padding: 0.6em 0 0.1em 3em;
  font-weight:700;
  line-height:1.3;
}





.reg-mark {
font:28px uknumberplateregular;
background-color: #ffd307;
border: 0.13em solid #333;
padding: 0.33em 0.4em 0.33em 0.5em;
font-size: 140%;
border-radius: 0.25em;
text-transform:uppercase;
}



/* Table/List for basic data */
/* - - - - - - - - - - - - - */

ul.ul-data {
  list-style-type: none;
  list-style-image: none;
  padding-left: 0;
  padding-top: 0.5em;
  margin-bottom: 0; }

@media (max-width: 640px) {
  ul.ul-data {
    margin-left: 0.3em;
    margin-right: 0; } }

ul.ul-data li {
  /* border-bottom: 1px solid #c6ccd1;*/
  display: -moz-inline-stack;
  display: inline-block;
  margin: 0;
  padding-bottom: 1em;
  width: 100%; }

ul.ul-data li:first-child {
  /*border-top: 1px solid #c6ccd1;*/
  padding-top: 5px; }

ul.ul-data li span:first-child {
  width: 27%;
  float: left;
  display: inline;
  display: -moz-inline-stack;
  display: inline-block; }

ul.ul-data li span:first-child:after {
  content: ":"; }

@media (max-width: 475px) {
  ul.ul-data li span {
    width: 100% !important; } }

ul.ul-data li strong {
  width: 60%;
  float: left;
  font-weight: 700;
  /*display: inline;*/
  display: -moz-inline-stack;
  display: inline-block; }

@media (max-width: 475px) {
  ul.ul-data li strong {
    width: 100% !important; } }

ul.ul-data li.mot-pass {
  border-left: solid green 3px;
  color: green;
  border-bottom: none;
  border-top: none;
  padding: 0.12em 0 0 1em;
  margin-bottom: 8px; }

ul.ul-data li.mot-fail {
  border-left: solid red 3px;
  color: red;
  border-bottom: none;
  border-top: none;
  padding: 0.12em 0 0 1em;
  margin-bottom: 8px; }

ul.ul-data li a {
  float: right;
  font-weight: 300;
  /*display: inline;*/
  display: -moz-inline-stack;
  display: inline-block; }

@media (max-width: 475px) {
  ul.ul-data li strong {
    width: 100% !important; } }

#evl-form strong {
  font-weight:700;
}

.input-large {
  font-size:1.4em;
  padding:0.2em;
}

select, .input-select {
display: block;
width: auto;
font-family: "nta",Arial,sans-serif;
line-height: 2;
padding: 3px;
margin:5px 0;
min-width: 150px;
max-width: 360px;
position: relative;
font-size: 1.1em;
padding-top: 2px;
background: #f0f0f0;
border: 2px #aaa solid;
float:left;
}

.input-short {
font-size:1.4em;
padding:0.2em;
width:6em;
}

.input-small {
width:3em;
}


.clearblock {
  border: none;
  background: none;
padding-top:0;
padding-left:30px;
padding-bottom:0;
}

.clearblock input {
  left:0;
top:0;
}
/* ... */

